# Sentinel-Trading-Terminal

./: CMakeLists.txt  CMakePresets.json  README.md  proposed_architecture.md
apps/sentinel_gui/: CMakeLists.txt
apps/stream_cli/: CMakeLists.txt
docs/: cross_compatability.md  sentinel-dataflow-migration-plan-3d37b9b4.plan.md
docs/features/: taskbar-dock.md
docs/features/build_overhaul/: WINDOWS_BUILD_SYSTEM_CMAKE_TOOL_MIGRATION.md
libs/core/: CMakeLists.txt
libs/gui/: CMakeLists.txt  UnifiedGridRenderer.cpp  UnifiedGridRenderer.h
libs/gui/render/: DataProcessor.cpp  DataProcessor.hpp  GridSceneNode.cpp  GridSceneNode.hpp  GridTypes.hpp  IDataAccessor.hpp  IRenderStrategy.hpp
libs/gui/render/strategies/: CandleStrategy.cpp  CandleStrategy.hpp  HeatmapStrategy.cpp  HeatmapStrategy.hpp  TradeBubbleStrategy.cpp  TradeBubbleStrategy.hpp  TradeFlowStrategy.cpp  TradeFlowStrategy.hpp
scripts/analyze/: README_CODE_ANALYSIS.md  analyze_cpp.py  count_cpp_lines.sh  extract_functions.sh  log-modes.sh  quick_cpp_overview.sh  reduce-log-spam.sh  to_txt.py
scripts/setup/: bootstrap-unix.sh  bootstrap-windows.ps1
